force-app/main/default/objects/CounterfeitTraceCode__c/CounterfeitTraceCode__c.object-meta.xml
<CustomObject>
    <label>CounterfeitTraceCode</label>
    <nameField>
        <displayFormat>CFT{0000}</displayFormat>
        <label>CounterfeitTraceCode ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CounterfeitTraceCodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>