force-app/main/default/objects/CounterfeitTraceCode__c/fields/ArchivalDate__c.field-meta.xml
<CustomField>
    <fullName>ArchivalDate__c</fullName>
    <description>Feed Outbound - Hardcode value &apos;&apos;</description>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ArchivalDate</label>
    <type>Text</type>
</CustomField>