force-app/main/default/objects/CounterfeitTraceCode__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>