force-app/main/default/objects/CounterfeitTraceCode__c/fields/CodeCategory__c.field-meta.xml
<CustomField>
    <fullName>CodeCategory__c</fullName>
    <description>Feed Outbound-CounterfeitTraceCode</description>
    <formula>&apos;CRC&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CodeCategory</label>
    <type>Text</type>
</CustomField>