force-app/main/default/objects/CounterfeitTraceCode__c/fields/CodeType__c.field-meta.xml
<CustomField>
    <fullName>CodeType__c</fullName>
    <description>Feed Outbound-CounterfeitTraceCode</description>
    <formula>&apos;CounterfeitTraceCode&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CodeType</label>
    <type>Text</type>
</CustomField>