force-app/main/default/objects/CounterfeitTraceCode__c/fields/DisplayDescription__c.field-meta.xml
<CustomField>
    <fullName>DisplayDescription__c</fullName>
    <description>Feed Outbound - Trace Code</description>
    <formula>Trace_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DisplayDescription</label>
    <type>Text</type>
</CustomField>