force-app/main/default/objects/CounterfeitTraceCode__c/fields/DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>DisplayOrder__c</fullName>
    <description>Feed Outbound - Empty Value &apos;&apos;</description>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DisplayOrder</label>
    <type>Text</type>
</CustomField>