force-app/main/default/objects/CounterfeitTraceCode__c/fields/LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDate__c</fullName>
    <description>Feed Outbound-CounterfeitTraceCode</description>
    <formula>IF ( DATEVALUE(LastModifiedDate) &gt;=
DATE ( YEAR (DATEVALUE(LastModifiedDate)),3,1)
+
(
14-
CASE( MOD(DATE ( YEAR (DATEVALUE(LastModifiedDate)),3,1) - DATE (1900,1,4),4) ,
0,4,MOD(DATE ( YEAR (DATEVALUE(LastModifiedDate)),3,1) - DATE (1900,1,4),4))
)
&amp;&amp;
DATEVALUE(LastModifiedDate) &lt;
DATE ( YEAR (DATEVALUE(LastModifiedDate)),11,1)
+
(
4-
CASE( MOD(DATE ( YEAR (DATEVALUE(LastModifiedDate)),11,1) - DATE (1900,1,4),4) ,
0,4,MOD(DATE ( YEAR (DATEVALUE(LastModifiedDate)),11,1) - DATE (1900,1,4),4))
),
MID( TEXT(LastModifiedDate- 4/24) , 6, 2)+&quot;/&quot;+MID( TEXT(LastModifiedDate- 4/24) , 9, 2)+&quot;/&quot;+MID( TEXT(LastModifiedDate- 4/24) , 0, 4) + &quot; &quot;+MID(TEXT(LastModifiedDate- 4/24), 11, 9)
,
MID( TEXT(LastModifiedDate- 5/24) , 6, 2)+&quot;/&quot;+MID( TEXT(LastModifiedDate- 5/24) , 9, 2)+&quot;/&quot;+MID( TEXT(LastModifiedDate- 5/24) , 0, 4) + &quot; &quot;+MID(TEXT(LastModifiedDate- 5/24), 11, 9)
)</formula>
    <label>LastModifiedDate</label>
    <type>Text</type>
</CustomField>