force-app/main/default/objects/CounterfeitTraceCode__c/fields/Mfg_Date__c.field-meta.xml
<CustomField>
    <fullName>Mfg_Date__c</fullName>
    <description>Feed outbound</description>
    <formula>if(Text(Production_Date__c) != &apos;&apos;,Text(month(Production_Date__c))+&apos;/&apos;+text(day(Production_Date__c))+&apos;/&apos;+text(year(Production_Date__c)),&apos;&apos;)</formula>
    <label>Mfg_Date</label>
    <type>Text</type>
</CustomField>