force-app/main/default/objects/CounterfeitTraceCode__c/fields/MFGBrand__c.field-meta.xml
<CustomField>
    <fullName>MFGBrand__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MFGBrand</label>
    <length>75</length>
    <type>Text</type>
</CustomField>