force-app/main/default/objects/CounterfeitTraceCode__c/fields/MfgDateFeed__c.field-meta.xml
<CustomField>
    <fullName>MfgDateFeed__c</fullName>
    <description>For Inbound Feed.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>MfgDateFeed</label>
    <length>15</length>
    <type>Text</type>
</CustomField>