force-app/main/default/objects/CounterfeitTraceCode__c/fields/MFGYear__c.field-meta.xml
<CustomField>
    <fullName>MFGYear__c</fullName>
    <formula>if(Text(Production_Date__c) != &apos;&apos;,Text(year(Production_Date__c)),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MFGYear</label>
    <type>Text</type>
</CustomField>