force-app/main/default/objects/CounterfeitTraceCode__c/fields/ModuleName__c.field-meta.xml
<CustomField>
    <fullName>ModuleName__c</fullName>
    <description>Feed Outbound-CounterfeitTraceCode</description>
    <formula>&apos;ALTRIA&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ModuleName</label>
    <type>Text</type>
</CustomField>