force-app/main/default/objects/CounterfeitTraceCode__c/fields/Production_Date__c.field-meta.xml
<CustomField>
    <fullName>Production_Date__c</fullName>
    <description>Mfg_Date|

Feed Outbound-CounterfeitTraceCode</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Production Date</label>
    <type>Date</type>
</CustomField>