force-app/main/default/objects/CounterfeitTraceCode__c/fields/Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Request_ID__c</fullName>
    <description>Feed Outbound-CounterfeitTraceCode</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Request ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>