force-app/main/default/objects/CounterfeitTraceCode__c/fields/ScreenName__c.field-meta.xml
<CustomField>
    <fullName>ScreenName__c</fullName>
    <description>Feed Outbound-CounterfeitTraceCode</description>
    <formula>&apos;GLOBAL&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ScreenName</label>
    <type>Text</type>
</CustomField>