force-app/main/default/objects/CounterfeitTraceCode__c/fields/SourceCity__c.field-meta.xml
<CustomField>
    <fullName>SourceCity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SourceCity</label>
    <length>50</length>
    <type>Text</type>
</CustomField>