force-app/main/default/objects/CounterfeitTraceCode__c/fields/SourceDateDetected__c.field-meta.xml
<CustomField>
    <fullName>SourceDateDetected__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SourceDateDetected</label>
    <type>Date</type>
</CustomField>