force-app/main/default/objects/CounterfeitTraceCode__c/fields/SourceState__c.field-meta.xml
<CustomField>
    <fullName>SourceState__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SourceState</label>
    <length>50</length>
    <type>Text</type>
</CustomField>