force-app/main/default/objects/CounterfeitTraceCode__c/fields/TenantId__c.field-meta.xml
<CustomField>
    <fullName>TenantId__c</fullName>
    <description>Feed Outbound-CounterfeitTraceCode</description>
    <formula>&apos;AloricaAltria&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TenantId</label>
    <type>Text</type>
</CustomField>