force-app/main/default/objects/CounterfeitTraceCode__c/fields/Trace_Code__c.field-meta.xml
<CustomField>
    <fullName>Trace_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trace Code</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>