force-app/main/default/objects/CounterfeitTraceCode__c/fields/TraceCode_Varchar1__c.field-meta.xml
<CustomField>
    <fullName>TraceCode_Varchar1__c</fullName>
    <description>Feed Outbound - Hardcode Trace code value for Varchar1</description>
    <formula>Trace_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TraceCode_Varchar1</label>
    <type>Text</type>
</CustomField>