force-app/main/default/objects/CounterfeitTraceCode__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>Feed Outbound-CounterfeitTraceCode</description>
    <label>Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>