force-app/main/default/objects/CounterfeitTraceCode__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>Trace_Code__c</columns>
    <columns>IsActive__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>ModuleName__c</columns>
    <columns>Production_Date__c</columns>
    <columns>TraceCode_Varchar1__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>